<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_layouts"
        android:textSize="22sp"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/et_Mensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_mensaje"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/chk_Terminos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chk_opcion"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btn_EnviarParametros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_enviar_parametros"
        android:layout_marginTop="20dp" />

</LinearLayout>