<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp" />

    <EditText
        android:id="@+id/et_Usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_usuario"
        android:inputType="text"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/btn_Entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_entrar" />

</LinearLayout>