<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_db"
        android:textSize="22sp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/tv_ResumenDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Conectando a la DB..."
        android:textSize="18sp"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/btn_InsertarTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_insertar_test" />

    <Button
        android:id="@+id/btn_BorrarDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_borrar_todo"
        android:backgroundTint="#888888" />

</LinearLayout>